# tcpsocket-chat-gtk-cpp

./: CMakeLists.txt  DataPacket.h  FileHelper.cpp  FileHelper.h  Serializer.cpp  Serializer.h  SocketServer.cpp  SocketServer.h
client/: SocketClient.cpp  SocketClient.h  chat.cpp  chat.h  chatWindow.glade  clientmain.cpp  global.cpp  global.h  login.cpp  login.glade  login.h
server/: server.cpp
test/: chatWindow.cpp  common.h  login.cpp  login.h  mainWindow.cpp  mainWindow.h
